fix djang-html block code

--- a/myDashboard/templates/template.html
+++ b/myDashboard/templates/template.html
@@ -1,9 +1,13 @@
 {% extends 'base.html' %}
 
-{{ block title }}{{ endblock title }}
+{% block title %}{% endblock title %}
 
-{{ block headStyle }}{{ endblock headStyle }}
+{% block headStyle %}{% endblock headStyle %}
 
-{{ block headScript }}{{ endblock headScript }}
+{% block headScript %}{% endblock headScript %}
 
-{{ block bodyMain }}{{ endblock bodyMain }}
+{% block bodyHeader %}{% endblock bodyHeader %}
+
+{% block bodyMain %}{% endblock bodyMain %}
+
+{% block bodyFooter %}{% endblock bodyFooter %}
