--- a/myDashboard/templates/base.html
+++ b/myDashboard/templates/base.html
@@ -1,3 +1,4 @@
+{% load static tailwind_tags %}
 <!DOCTYPE html>
 <html lang="ja">
   <head>
@@ -5,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}{% endblock title %}</title>
+    {% tailwind_css %}
     {% block headStyle %}{% endblock headStyle %}
     {% block headScript %}{% endblock headScript %}
   </head>
