add test pipenv script

--- a/myDashboard/templates/index.html
+++ b/myDashboard/templates/index.html
@@ -11,7 +11,7 @@
 {% block bodyHeader %}{% endblock bodyHeader %}
 
 {% block bodyMain %}
-  <p class="text-red-600">Hello World</p>
+  <p class="text-red-600 text-lg">Hello World</p>
 {% endblock bodyMain %}
 
 {% block bodyFooter %}{% endblock bodyFooter %}
