--- a/myDashboard/templates/index.html
+++ b/myDashboard/templates/index.html
@@ -312,36 +312,16 @@
           <div class="md:col-span-2 xl:col-span-3">
             <h3 class="text-lg font-semibold">Task summaries of recent sprints</h3>
           </div>
-          <div class="md:col-span-2 xl:col-span-1">
-            <div class="rounded bg-gray-200 p-3">
+          <div class="md:col-span-2 xl:col-span-3">
+            <div class="rounded bg0gray-200 p-3">
               <div class="flex justify-between py-1 text-black">
-                <h3 class="text-sm font-semibold">Tasks in TO DO</h3>
-                <svg class="h-4 fill-current text-gray-600 cursor-pointer" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 10a1.999 1.999 0 1 0 0 4 1.999 1.999 0 1 0 0-4zm7 0a1.999 1.999 0 1 0 0 4 1.999 1.999 0 1 0 0-4zm7 0a1.999 1.999 0 1 0 0 4 1.999 1.999 0 1 0 0-4z" /></svg>
+                <h3 class="text-sm font-semibold">thousandeyes.com</h3>
+                <svg class="h-4 fill-current text-gray-600 cursor-pointer hidden" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24">
+                  <path d="M5 10a1.999 1.999 0 1 0 0 4 1.999 1.999 0 1 0 0-4zm7 0a1.999 1.999 0 1 0 0 4 1.999 1.999 0 1 0 0-4zm7 0a1.999 1.999 0 1 0 0 4 1.999 1.999 0 1 0 0-4z"/>
+                </svg>
               </div>
-              <div class="text-sm text-black mt-2">
-                <div class="bg-white hover:bg-gray-50 p-2 rounded mt-1 border-b border-gray-100 cursor-pointer">Delete all references from the wiki</div>
-                <div class="bg-white hover:bg-gray-50 p-2 rounded mt-1 border-b border-gray-100 cursor-pointer">Remove analytics code</div>
-                <div class="bg-white hover:bg-gray-50 p-2 rounded mt-1 border-b border-gray-100 cursor-pointer">
-                  Do a mobile first layout
-                  <div class="text-gray-500 mt-2 ml-2 flex justify-between items-start">
-                    <span class="text-xs flex items-center">
-                      <svg class="h-4 fill-current mr-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50"><path d="M11 4c-3.855 0-7 3.145-7 7v28c0 3.855 3.145 7 7 7h28c3.855 0 7-3.145 7-7V11c0-3.855-3.145-7-7-7zm0 2h28c2.773 0 5 2.227 5 5v28c0 2.773-2.227 5-5 5H11c-2.773 0-5-2.227-5-5V11c0-2.773 2.227-5 5-5zm25.234 9.832l-13.32 15.723-8.133-7.586-1.363 1.465 9.664 9.015 14.684-17.324z" /></svg>
-                      3/5
-                    </span>
-                    <img src="https://i.imgur.com/OZaT7jl.png" class="rounded-full" />
-                  </div>
-                </div>
-                <div class="bg-white hover:bg-gray-50 p-2 rounded mt-1 border-b border-gray-100 cursor-pointer">Check the meta tags</div>
-                <div class="bg-white hover:bg-gray-50 p-2 rounded mt-1 border-b border-gray-100 cursor-pointer">
-                  Think more tasks for this example
-                  <div class="text-gray-500 mt-2 ml-2 flex justify-between items-start">
-                    <span class="text-xs flex items-center">
-                      <svg class="h-4 fill-current mr-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50"><path d="M11 4c-3.855 0-7 3.145-7 7v28c0 3.855 3.145 7 7 7h28c3.855 0 7-3.145 7-7V11c0-3.855-3.145-7-7-7zm0 2h28c2.773 0 5 2.227 5 5v28c0 2.773-2.227 5-5 5H11c-2.773 0-5-2.227-5-5V11c0-2.773 2.227-5 5-5zm25.234 9.832l-13.32 15.723-8.133-7.586-1.363 1.465 9.664 9.015 14.684-17.324z" /></svg>
-                      0/3
-                    </span>
-                  </div>
-                </div>
-                <p class="mt-3 text-gray-600">Add a card...</p>
+              <div class="t<ext-sm text-black mt-2">
+                <iframe src="https://intoverview.share.thousandeyes.com/" class="w-full overflow-hidden" style="height:580px;" scrolling="no"></iframe>
               </div>
             </div>
           </div>
