--- a/myDashboard/templates/index.html
+++ b/myDashboard/templates/index.html
@@ -135,40 +135,41 @@
             <div class="rounded-t mb-0 px-0 border-0">
               <div class="flex flex-wrap items-center px-4 py-2">
                 <div class="relative w-full max-w-full flex-grow flex-1">
-                  <h3 class="font-semibold text-base text-gray-900">Social Traffic</h3>
+                  <h3 class="font-semibold text-base text-gray-900">リンク集</h3>
                 </div>
                 <div class="relative w-full max-w-full flex-grow flex-1 text-right">
-                  <button class="bg-blue-500 text-white active:bg-blue-600 text-xs font-bold uppercase px-3 py-1 rounded outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">See all</button>
+                  <label class="inline-flex items-center mt-3">
+                    <input type="checkbox" class="form-checkbox h-5 w-5 text-green-600" checked="checked">
+                    <span class="ml-2 text-gray-700">Open New Tab</span>
+                  </label>
+                  <button class="hidden bg-blue-500 text-white active:bg-blue-600 text-xs font-bold uppercase px-3 py-1 rounded outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">Open Link</button>
                 </div>
               </div>
               <div class="block w-full overflow-x-auto">
                 <table class="items-center w-full bg-transparent border-collapse">
                   <thead>
                     <tr>
-                      <th class="px-4 bg-gray-100 text-gray-500 align-middle border border-solid border-gray-200 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Referral</th>
-                      <th class="px-4 bg-gray-100 text-gray-500 align-middle border border-solid border-gray-200 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Visitors</th>
-                      <th class="px-4 bg-gray-100 text-gray-500 align-middle border border-solid border-gray-200 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left min-w-140-px"></th>
+                      <th class="px-4 bg-gray-100 text-gray-500 align-middle border border-solid border-gray-200 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Name</th>
+                      <th class="px-4 bg-gray-100 text-gray-500 align-middle border border-solid border-gray-200 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Link</th>
+                      <th class="hidden px-4 bg-gray-100 text-gray-500 align-middle border border-solid border-gray-200 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left min-w-140-px"></th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr class="text-gray-700">
-                      <th class="border-t-0 px-4 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 text-left">Facebook</th>
-                      <td class="border-t-0 px-4 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">5,480</td>
+                      <th class="border-t-0 px-4 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 text-left">Google</th>
                       <td class="border-t-0 px-4 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
-                        <div class="flex items-center">
-                          <span class="mr-2">70%</span>
-                          <div class="relative w-full">
-                            <div class="overflow-hidden h-2 text-xs flex rounded bg-blue-200">
-                              <div style="width: 70%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-blue-600"></div>
-                            </div>
-                          </div>
-                        </div>
+                        <a class="flex items-center font-medium text-blue-500 hover:text-blue-600" href="https://google.com" style="outline: none;">
+                          <span class="flex hover:border-b border-gray-400">
+                            <span>https://google.com</span>
+                            <span>
+                              <svg width="20" height="20" viewbox="0 0 20 20" fill="currentColor" class="transform transition-transform duration-500 ease-in-out">
+                                <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path>
+                              </svg>
+                            </span>
+                          </span>
+                        </a>
                       </td>
-                    </tr>
-                    <tr class="text-gray-700">
-                      <th class="border-t-0 px-4 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 text-left">Twitter</th>
-                      <td class="border-t-0 px-4 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">3,380</td>
-                      <td class="border-t-0 px-4 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
+                      <td class="hidden border-t-0 px-4 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
                         <div class="flex items-center">
                           <span class="mr-2">40%</span>
                           <div class="relative w-full">
@@ -179,48 +180,7 @@
                         </div>
                       </td>
                     </tr>
-                    <tr class="text-gray-700">
-                      <th class="border-t-0 px-4 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 text-left">Instagram</th>
-                      <td class="border-t-0 px-4 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">4,105</td>
-                      <td class="border-t-0 px-4 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
-                        <div class="flex items-center">
-                          <span class="mr-2">45%</span>
-                          <div class="relative w-full">
-                            <div class="overflow-hidden h-2 text-xs flex rounded bg-pink-200">
-                              <div style="width: 45%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-pink-500"></div>
-                            </div>
-                          </div>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr class="text-gray-700">
-                      <th class="border-t-0 px-4 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 text-left">Google</th>
-                      <td class="border-t-0 px-4 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">4,985</td>
-                      <td class="border-t-0 px-4 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
-                        <div class="flex items-center">
-                          <span class="mr-2">60%</span>
-                          <div class="relative w-full">
-                            <div class="overflow-hidden h-2 text-xs flex rounded bg-red-200">
-                              <div style="width: 60%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-red-500"></div>
-                            </div>
-                          </div>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr class="text-gray-700">
-                      <th class="border-t-0 px-4 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 text-left">Linkedin</th>
-                      <td class="border-t-0 px-4 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">2,250</td>
-                      <td class="border-t-0 px-4 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
-                        <div class="flex items-center">
-                          <span class="mr-2">30%</span>
-                          <div class="relative w-full">
-                            <div class="overflow-hidden h-2 text-xs flex rounded bg-blue-200">
-                              <div style="width: 30%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-blue-700"></div>
-                            </div>
-                          </div>
-                        </div>
-                      </td>
-                    </tr>
+
                   </tbody>
                 </table>
               </div>
@@ -233,7 +193,7 @@
             <div class="rounded-t mb-0 px-0 border-0">
               <div class="flex flex-wrap items-center px-4 py-2">
                 <div class="relative w-full max-w-full flex-grow flex-1">
-                  <h3 class="font-semibold text-base text-gray-900">Recent Activities</h3>
+                  <h3 class="font-semibold text-base text-gray-900">Salseforce Status</h3>
                 </div>
                 <div class="relative w-full max-w-full flex-grow flex-1 text-right">
                   <button class="bg-blue-500 text-white active:bg-blue-600 text-xs font-bold uppercase px-3 py-1 rounded outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">See all</button>
@@ -254,8 +214,8 @@
                           <a class="font-medium text-gray-800 hover:text-gray-900" href="#0" style="outline: none;">Nick Mark</a> mentioned <a class="font-medium text-gray-800" href="#0" style="outline: none;">Sara Smith</a> in a new post
                         </div>
                         <div class="flex-shrink-0 ml-2">
-                          <a class="flex items-center font-medium text-blue-500 hover:text-blue-600" href="#0" style="outline: none;">
-                            View<span><svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor" class="transform transition-transform duration-500 ease-in-out"><path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg></span>
+                          <a class="flex items-center font-medium text-blue-500 hover:text-blue-600" href="#0" style="outline: none;">View
+                            <span><svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor" class="transform transition-transform duration-500 ease-in-out"><path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg></span>
                           </a>
                         </div>
                       </div>
@@ -310,35 +270,68 @@
         <!-- Task Summaries -->
         <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 p-4 gap-4 text-black">
           <div class="md:col-span-2 xl:col-span-3">
-            <h3 class="text-lg font-semibold">Task summaries of recent sprints</h3>
+            <h3 class="text-lg font-semibold">AWS Status</h3>
           </div>
+          {% include 'thousandeyes.html' %}
           <div class="md:col-span-2 xl:col-span-3">
-            <div class="rounded bg0gray-200 p-3">
-              <div class="flex justify-between py-1 text-black">
-                <h3 class="text-sm font-semibold">thousandeyes.com</h3>
-                <svg class="h-4 fill-current text-gray-600 cursor-pointer hidden" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24">
-                  <path d="M5 10a1.999 1.999 0 1 0 0 4 1.999 1.999 0 1 0 0-4zm7 0a1.999 1.999 0 1 0 0 4 1.999 1.999 0 1 0 0-4zm7 0a1.999 1.999 0 1 0 0 4 1.999 1.999 0 1 0 0-4z"/>
-                </svg>
-              </div>
-              <div class="t<ext-sm text-black mt-2">
-                <iframe src="https://intoverview.share.thousandeyes.com/" class="w-full overflow-hidden" style="height:580px;" scrolling="no"></iframe>
-              </div>
-            </div>
-          </div>
-          <div>
             <div class="rounded bg-gray-200 p-3">
               <div class="flex justify-between py-1 text-black">
                 <h3 class="text-sm font-semibold">Tasks in DEVELOPMENT</h3>
-                <svg class="h-4 fill-current text-gray-600 cursor-pointer" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 10a1.999 1.999 0 1 0 0 4 1.999 1.999 0 1 0 0-4zm7 0a1.999 1.999 0 1 0 0 4 1.999 1.999 0 1 0 0-4zm7 0a1.999 1.999 0 1 0 0 4 1.999 1.999 0 1 0 0-4z" /></svg>
+                <svg class="h-4 fill-current text-gray-600 cursor-pointer" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24">
+                  <path d="M5 10a1.999 1.999 0 1 0 0 4 1.999 1.999 0 1 0 0-4zm7 0a1.999 1.999 0 1 0 0 4 1.999 1.999 0 1 0 0-4zm7 0a1.999 1.999 0 1 0 0 4 1.999 1.999 0 1 0 0-4z"/></svg>
               </div>
-              <div class="text-sm text-black mt-2">
+              <table class="w-full mt-2">
+                <thead>
+                  <tr class="text-xs font-semibold tracking-wide text-left text-gray-500 uppercase border-b bg-gray-50">
+                    <th class="px-4 py-3">Channel Name</th>
+                    <th class="px-4 py-3">Description</th>
+                    <th class="px-4 py-3">Last Build Date</th>
+                    <th class="px-4 py-3">Update Time</th>
+                  </tr>
+                </thead>
+                <tbody class="bg-white divide-y">
+                  <tr class="bg-gray-50 hover:bg-gray-100 text-gray-700">
+                    <td class="px-4 py-3">&lt;![CDATA[Amazon API Gateway (Tokyo) Service Status]]&gt;</td>
+                    <td class="px-4 py-3">&lt;![CDATA[Amazon API Gateway (Tokyo) Service Status]]&gt;</td>
+                    <td class="px-4 py-3">
+                      <time>2021/07/17 16:05:32</time>
+                      <!-- new Date("Sat, 17 Jul 2021 00:05:32 PDT") -->
+                    </td>
+                    <td class="px-4 py-3">
+                      <time>2021/07/18 10:05</time>
+                    </td>
+                  </tr>
+                  <tr class="bg-gray-50 hover:bg-gray-100 text-gray-700">
+                    <td class="px-4 py-3">&lt;![CDATA[AWS Config (Tokyo) Service Status]]&gt;</td>
+                    <td class="px-4 py-3">&lt;![CDATA[AWS Config (Tokyo) Service Status]]&gt;</td>
+                    <td class="px-4 py-3">
+                      <time>2021/07/17 16:05:29</time>
+                    </td>
+                    <td class="px-4 py-3">
+                      <time>2021/07/18 10:05</time>
+                    </td>
+                  </tr>
+                  <tr class="bg-gray-50 hover:bg-gray-100 text-gray-700">
+                    <td class="px-4 py-3">&lt;![CDATA[AWS Data Pipeline (Tokyo) Service Status]]&gt;</td>
+                    <td class="px-4 py-3">&lt;![CDATA[AWS Data Pipeline (Tokyo) Service Status]]&gt;</td>
+                    <td class="px-4 py-3">
+                      <time>2021/07/17 16:05:32</time>
+                    </td>
+                    <td class="px-4 py-3">
+                      <time>2021/07/18 10:05</time>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+              <div class="text-sm text-black mt-2 hidden">
                 <div class="bg-white hover:bg-gray-50 p-2 rounded mt-1 border-b border-gray-100 cursor-pointer">Delete all references from the wiki</div>
                 <div class="bg-white hover:bg-gray-50 p-2 rounded mt-1 border-b border-gray-100 cursor-pointer">Remove analytics code</div>
                 <div class="bg-white hover:bg-gray-50 p-2 rounded mt-1 border-b border-gray-100 cursor-pointer">
                   Do a mobile first layout
                   <div class="flex justify-between items-start mt-2 ml-2 text-white text-xs">
                     <span class="bg-pink-600 rounded p-1 text-xs flex items-center">
-                      <svg class="h-4 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2c-.8 0-1.5.7-1.5 1.5v.688C7.344 4.87 5 7.62 5 11v4.5l-2 2.313V19h18v-1.188L19 15.5V11c0-3.379-2.344-6.129-5.5-6.813V3.5c0-.8-.7-1.5-1.5-1.5zm-2 18c0 1.102.898 2 2 2 1.102 0 2-.898 2-2z" /></svg>
+                      <svg class="h-4 fill-current" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24">
+                        <path d="M12 2c-.8 0-1.5.7-1.5 1.5v.688C7.344 4.87 5 7.62 5 11v4.5l-2 2.313V19h18v-1.188L19 15.5V11c0-3.379-2.344-6.129-5.5-6.813V3.5c0-.8-.7-1.5-1.5-1.5zm-2 18c0 1.102.898 2 2 2 1.102 0 2-.898 2-2z"/></svg>
                       2
                     </span>
                   </div>
@@ -348,7 +341,8 @@
                   Think more tasks for this example
                   <div class="text-gray-500 mt-2 ml-2 flex justify-between items-start">
                     <span class="text-xs flex items-center">
-                      <svg class="h-4 fill-current mr-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50"><path d="M11 4c-3.855 0-7 3.145-7 7v28c0 3.855 3.145 7 7 7h28c3.855 0 7-3.145 7-7V11c0-3.855-3.145-7-7-7zm0 2h28c2.773 0 5 2.227 5 5v28c0 2.773-2.227 5-5 5H11c-2.773 0-5-2.227-5-5V11c0-2.773 2.227-5 5-5zm25.234 9.832l-13.32 15.723-8.133-7.586-1.363 1.465 9.664 9.015 14.684-17.324z" /></svg>
+                      <svg class="h-4 fill-current mr-1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 50 50">
+                        <path d="M11 4c-3.855 0-7 3.145-7 7v28c0 3.855 3.145 7 7 7h28c3.855 0 7-3.145 7-7V11c0-3.855-3.145-7-7-7zm0 2h28c2.773 0 5 2.227 5 5v28c0 2.773-2.227 5-5 5H11c-2.773 0-5-2.227-5-5V11c0-2.773 2.227-5 5-5zm25.234 9.832l-13.32 15.723-8.133-7.586-1.363 1.465 9.664 9.015 14.684-17.324z"/></svg>
                       0/3
                     </span>
                   </div>
