--- a/myDashboard/templates/index.html
+++ b/myDashboard/templates/index.html
@@ -34,6 +34,17 @@
         active.classList.add("pointer-events-none");
       });
     }
+    function formatDate (date, format) {
+      format = format.replace(/yyyy/g, date.getFullYear());
+      format = format.replace(/MM/g, ('0' + (date.getMonth() + 1)).slice(-2));
+      format = format.replace(/dd/g, ('0' + date.getDate()).slice(-2));
+      format = format.replace(/HH/g, ('0' + date.getHours()).slice(-2));
+      format = format.replace(/mm/g, ('0' + date.getMinutes()).slice(-2));
+      format = format.replace(/ss/g, ('0' + date.getSeconds()).slice(-2));
+      format = format.replace(/SSS/g, ('00' + date.getMilliseconds()).slice(-3));
+      return format;
+    };
+    const dateFormatTemplate = "yyyy/MM/dd HH:mm:ss";
   </script>
 {% endblock headScript %}
 
@@ -384,17 +395,6 @@
               </table>
               <script>
                 (function(){
-                  function formatDate (date, format) {
-                    format = format.replace(/yyyy/g, date.getFullYear());
-                    format = format.replace(/MM/g, ('0' + (date.getMonth() + 1)).slice(-2));
-                    format = format.replace(/dd/g, ('0' + date.getDate()).slice(-2));
-                    format = format.replace(/HH/g, ('0' + date.getHours()).slice(-2));
-                    format = format.replace(/mm/g, ('0' + date.getMinutes()).slice(-2));
-                    format = format.replace(/ss/g, ('0' + date.getSeconds()).slice(-2));
-                    format = format.replace(/SSS/g, ('00' + date.getMilliseconds()).slice(-3));
-                    return format;
-                  };
-                  const dateFormatTemplate = "yyyy/MM/dd HH:mm:ss";
                   const get_urls = [
                     "https://status.aws.amazon.com/rss/apigateway-ap-northeast-1.rss",
                     "https://status.aws.amazon.com/rss/appflow-ap-northeast-1.rss",
@@ -471,7 +471,67 @@
           </div>
         </div>
         <!-- ./Task Summaries -->
+        <!-- downdetector -->
+        <div class="grid grid-cols-1 lg:grid-cols-2 p-4 gap-4">
+          <div class="relative flex flex-col min-w-0 mb-4 lg:mb-0 break-words bg-gray-50 dark:bg-gray-800 w-full shadow-lg rounded">
+            <div class="rounded-t mb-0 px-0 border-0">
+              <div class="flex flex-wrap items-center px-4 py-2">
+                <div class="relative w-full max-w-full flex-grow flex-1">
+                  <h3 class="font-semibold text-base text-gray-900 dark:text-gray-50">Downdetector Archive Last 5</h3>
+                </div>
+                <div class="relative w-full max-w-full flex-grow flex-1 text-right">
+                  <button class="bg-blue-500 dark:bg-gray-100 text-white active:bg-blue-600 dark:text-gray-800 dark:active:text-gray-700 text-xs font-bold uppercase px-3 py-1 rounded outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">See all</button>
+                </div>
+            </div>
+              <div class="block w-full overflow-x-auto">
+                <table class="items-center w-full bg-transparent border-collapse">
+                  <thead>
+                    <tr>
+                      <th class="px-4 bg-gray-100 dark:bg-gray-600 text-gray-500 dark:text-gray-100 align-middle border border-solid border-gray-200 dark:border-gray-500 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Name</th>
+                      <th class="px-4 bg-gray-100 dark:bg-gray-600 text-gray-500 dark:text-gray-100 align-middle border border-solid border-gray-200 dark:border-gray-500 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Date</th>
+                      <th class="hidden px-4 bg-gray-100 dark:bg-gray-600 text-gray-500 dark:text-gray-100 align-middle border border-solid border-gray-200 dark:border-gray-500 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left min-w-140-px"></th>
+                    </tr>
+                  </thead>
+                  <tbody id="downdetector-tablebody">
+                    <template id="downdetector-template">
+                      <tr class="text-gray-700 dark:text-gray-100">
+                        <th class="border-t-0 px-4 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 text-left">
+                          <a class="service-link flex items-center font-medium text-blue-500 hover:text-blue-600" href="">
+                            <span class="hover:border-b border-gray-400">
+                              <span class="service-name"></span>
+                            </span>
+                          </a>
+                        </th>
+                        <td class="waking-time border-t-0 px-4 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
+                          <time></time>
+                        </td>
+                      </tr>
+                    </template>
+                  </tbody>
+                </table>
+                <script>
+                  (function(){
+                    axios.get("{% url 'downdetector' %}").then(function(response){
+                      const responseData = response.data.table;
+                      const content = document.getElementById("downdetector-template").content;
+                      const fragment = document.createDocumentFragment();
+                      for(let item of responseData.slice(0,5)){
+                        const clone = document.importNode(content, true);
+                        clone.querySelector(".service-link").href = decodeURI("https://downdetector.jp" + item.link);
+                        clone.querySelector(".service-name").textContent = item.name;
+                        clone.querySelector(".waking-time time").textContent = formatDate(new Date(`${item.date} ${item.time}`),dateFormatTemplate);
+                        fragment.appendChild(clone);
+                      }
+                      document.querySelector('#downdetector-tablebody').appendChild(fragment);
+                    });
+                  }());
+                </script>
+              </div>
+            </div>
+          </div>
 
+        </div>
+        <!-- downdetector end -->
         <!-- Client Table -->
         <div class="mt-4 mx-4 hidden">
           <div class="w-full overflow-hidden rounded-lg shadow-xs">
